maya-deploy-devui.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: maya
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app : maya
    spec:
      securityContext:
        fsGroup: 106
      containers:
        - name: maya
          image: index.docker.io/mayadataio/maya-io-server:alpha-r6-1523559885
          imagePullPolicy: Always
          ports:
          - containerPort: 8080
          volumeMounts:
          - name: maya-database
            mountPath: /var/lib/mysql
          - name: maya-store
            mountPath: /mayastore
          - name: maya-config
            mountPath: /var/lib/cattle/etc/maya.properties
            subPath: maya.properties
      imagePullSecrets:
      - name: mayadatasecret
      volumes:
      - name: maya-database
        gcePersistentDisk:
          pdName: maya-test-disk
          # in the gke, the disk should already be created in the cluster using the following command
          # gcloud compute disks create --size 200GB maya-prod-disk
          fsType: ext4
      - name: maya-store
        gcePersistentDisk:
          pdName: maya-test-store-disk
          # in the gke, the disk should already be created in the cluster using the following command
          # gcloud compute disks create --size 2GB maya-store-disk
          fsType: ext4
      - name: maya-config
        configMap:
          name: maya-config
