maya-ingress-gke.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  annotations:
    #kubernetes.io/ingress.provider: nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers X-Frame-Options SAMEORIGIN;
  name: maya-nginx-ingress
spec:
  tls:
  - hosts:
    - preprod.mayaonline.io
    - preprod-app.mayaonline.io
    secretName: preprod-lego-secret
  rules:
  - host: preprod-app.mayaonline.io
    http:
      paths:
      - path: /
        backend:
          serviceName: maya-service
          servicePort: 8080
      - path: /echo/
        backend:
          serviceName: echoheaders
          servicePort: 80
      - path: /ui/
        backend:
          serviceName: maya-ui
          servicePort: 80
      - path: /chat-server/
        backend:
          serviceName: chat-server
          servicePort: 8080
  - host: preprod.mayaonline.io
    http:
      paths:
        - path: /
          backend:
            serviceName: mktapp-mo-service
            servicePort: 80
        - path: /echo/
          backend:
            serviceName: echoheaders
            servicePort: 80
---

kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  annotations:
    #kubernetes.io/ingress.provider: nginx
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/tls-acme: "true"
    # type of authentication
    nginx.ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    nginx.ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropiate context why the authentication is required
    nginx.ingress.kubernetes.io/auth-realm: "Authentication Required"
    nginx.ingress.kubernetes.io/auth-response-headers: username
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Scope-OrgID $remote_user;
  name: maya-auth-ingress
spec:
  tls:
  - hosts:
    - preprod-app.mayaonline.io
    secretName: preprod-lego-secret
  rules:
  - host: preprod-app.mayaonline.io
    http:
      paths:
      - path: /maya-cortex-push/
        backend:
          serviceName: distributor
          servicePort: 80
      - path: /maya-cortex-pull/
        backend:
          serviceName: querier
          servicePort: 80
      - path: /maya-cortex-configs/
        backend:
          serviceName: configs
          servicePort: 80
      - path: /maya-cortex-am/
        backend:
          serviceName: alertmanager
          servicePort: 80
