maya-uidev-ingress-gke.yaml
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/tls-acme: "true"
    ingress.kubernetes.io/configuration-snippet: |
      more_set_headers X-Frame-Options SAMEORIGIN;
  name: maya-nginx-ingress
spec:
  tls:
  - hosts:
    - uidev-app.mayacloud.io 
    secretName: mayauidev-secret
  rules:
  - host: uidev-app.mayacloud.io 
    http:
      paths:
      - path: /
        backend:
          serviceName: maya-service
          servicePort: 8080
      - path: /echo/
        backend:
          serviceName: echoheaders
          servicePort: 80
      - path: /ui/
        backend:
          serviceName: maya-ui
          servicePort: 80
      - path: /chat-server/
        backend:
          serviceName: chat-server
          servicePort: 8080
  - host: uidev-app.mayacloud.io 
    http: 
      paths:
        - path: /
          backend: 
            serviceName: mktapp-mo-service
            servicePort: 80
        - path: /echo/
          backend: 
            serviceName: echoheaders
            servicePort: 80          
    
---
kind: Ingress
apiVersion: extensions/v1beta1
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/tls-acme: "true"
    # type of authentication
    ingress.kubernetes.io/auth-type: basic
    # name of the secret that contains the user/password definitions
    ingress.kubernetes.io/auth-secret: basic-auth
    # message to display with an appropiate context why the authentication is required
    ingress.kubernetes.io/auth-realm: "Authentication Required"
    ingress.kubernetes.io/auth-response-headers: username
    ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header X-Scope-OrgID $remote_user;
      dav_methods PUT;
  name: maya-auth-ingress
spec:
  - hosts:
    - uidev-app.mayacloud.io
    secretName: mayauidev-secret 
  rules:
  - host: uidev-app.mayacloud.io
    http:
      paths:
      - path: /maya-cortex-push/
        backend:
          serviceName: distributor
          servicePort: 80
      - path: /maya-cortex-pull/
        backend:
          serviceName: querier
          servicePort: 80
      - path: /maya-cortex-configs/
        backend:
          serviceName: configs
          servicePort: 80
      - path: /maya-cortex-am/
        backend:
          serviceName: alertmanager
          servicePort: 80
      - path: /alertquery/
        backend:
          serviceName: alertquery
          servicePort: 80
      - path: /alertdist/
        backend:
          serviceName: alertdist
          servicePort: 80
